[UPDATE]Bug fixed